tests/negative/modules/import_bad_symbol.tx
// EXPECT: COMPILE_ERROR
// Test: importing a symbol that doesn't exist in the module
import { nonExistentFunction } from "../../positive/modules/math.tx";

function main(): void {
    print("should not reach here");
}
